      4 players games
    - Blockem keeps track now of the challenges completed by the human user and
      marks them in the new challenge dialog
    - The configuration file introduced in 0.3.0 has been now expanded to
      contain also the challenges that had been succesfully completed by the
      human user. It is also used now in *nix systems, written in 
      $HOME/.blockem/blockem.conf

19/01/2011: Version 0.3.2
    - Removed "parser error" messages shown at startup when blockem wrongly 
      tries to load a .dtd file as .xml. Blockem will only try to load
      those files located at $(game-data-folder)/blockem/challenges whose 
      extension is ".xml"
    - 4 players game added. All players MUST be humans since there is no
      AI implemented (yet)
    - Pieces of any non-moving players can be hidden from the main view
      through a menu option. This option can be used to get a bigger board
      while maintaining the window size
    - Fixed error transferring starting coords settings from the "new 
      total allocation game dialog" to the actual game engine
    - Fixed error in tar.gz package. Testing .xml files for challenge
      processing tests had been left out of the package
    - Stripped out debug information when compiling without all the DEBUG
      flags. Binary size has been decreased to less than 10% of the original
      size under GNU/Linux

29/10/2010: Version 0.3.1
    - Added support for non-square shaped boards (they can be used now in total
      deployment games)
    - Challenge game mode added to the GUI. A blockem challenge is a special 
      kind of game that consists in a customised board where a player must 
      allocate a set of pieces (might be all of them or just a subset of all 
      the available pieces). There is no opponent, so the human user will be 
      playing against the challenge's designer. Have a read to the README file
      of this project (also to the file challenges/README)